--- a/admin/app/views/points_translation_list.scala.html
+++ b/admin/app/views/points_translation_list.scala.html
@@ -25,7 +25,7 @@
         @for(p <- points_translation) {
         <tr>
             <td><a href="@PointsTranslationController.history(p.eventTypeId)">@OptaEventType.getEnum(p.eventTypeId).name()</td>
-            <td>@OptaEventType.getEnum(p.eventTypeId).description</td>
+            <td>@OptaEventType.getEnum(p.eventTypeId)._description</td>
             <td><a href="@PointsTranslationController.edit(p.pointsTranslationId.toString())">@p.points</td>
             <td>@p.timestamp.format("yyyy/MM/dd HH:mm:ss")</td>
         </tr>
