--- a/admin/app/views/simulator.scala.html
+++ b/admin/app/views/simulator.scala.html
@@ -16,6 +16,7 @@
         function updateFields() {
             $("#time").load("/admin/current_date_simulator");
             $("#nextStepDesc").load("/admin/next_step_desc_simulator");
+            $("#nextStop").load("/admin/next_stop_simulator");
         }
 
         $(document).ready( function(){
@@ -29,12 +30,13 @@
 @main("Simulator - Admin", scripts) {
 
 <h1 class="page-header">Simulator</h1>
-    <div id="time" style="font-weight:700">@GlobalDate.getCurrentDateString()</div>
+    <div style="display:inline-block">Current date: <div id="time" style="font-weight:700">@GlobalDate.getCurrentDateString()</div></div>
+    <div>Next stop: <div id="nextSop" style="font-weight:700">@OptaSimulator.getNextStop()</div>
     <div id="nextStepDesc" style="font-weight:700">@OptaSimulator.getNextStepDescription()</div>
 
     <div class="btn-group">
         @if(OptaSimulator.isPaused()) {
-            <a class="btn btn-primary play" href="@SimulatorController.start" title="Starts the simulator at the beginning of time (the first date sent by Opta) or resumes execution from the current date.">
+            <a class="btn btn-sim btn-primary play" href="@SimulatorController.start" title="Starts the simulator at the beginning of time (the first date sent by Opta) or resumes execution from the current date.">
                 @if(!OptaSimulator.isCreated()) {
                     Start
                 } else {
@@ -42,13 +44,13 @@
                 }
             </a>
         } else {
-            <a class="btn btn-primary pause" href="@SimulatorController.pause">
+            <a class="btn btn-sim btn-primary pause" href="@SimulatorController.pause">
                 Pause
             </a>
         }
 
         @if(OptaSimulator.isPaused()) {
-            <a class="btn btn-primary forward" href="@SimulatorController.nextStep" title="Process the next Opta file (or first if we are at the beginning of time)">
+            <a class="btn btn-sim btn-primary forward" href="@SimulatorController.nextStep" title="Process the next Opta file (or first if we are at the beginning of time)">
                 @if(OptaSimulator.isCreated()) {
                     Next step
                 } else {
@@ -56,11 +58,11 @@
                 }
             </a>
         } else {
-            <a class="btn btn-primary disabled forward" href="@SimulatorController.nextStep" title="Disabled">
+            <a class="btn btn-sim btn-primary disabled forward" href="@SimulatorController.nextStep" title="Disabled">
              Next step
             </a>
         }
-        <a class="btn btn-primary stop" href="@SimulatorController.reset" title="Erases the whole Database and resets to the beginning of time.">
+        <a class="btn btn-sim btn-primary stop" href="@SimulatorController.reset" title="Erases the whole Database and resets to the beginning of time.">
              Reset
         </a>
     </div>
