snapshot: crea una unica snapshot...

--- a/admin/app/views/simulator.scala.html
+++ b/admin/app/views/simulator.scala.html
@@ -114,6 +114,9 @@
         <a class="btn btn-sim btn-primary stop" href="@SimulatorController.reset" title="Erases the whole Database and resets to the beginning of time.">
              Reset
         </a>
+        <a class="btn btn-sim btn-primary stop" href="@SimulatorController.replayLast" title="Erases the whole Database and resets to the beginning of time.">
+            Replay Last
+        </a>
     </div>
     <hr>
     @if(OptaSimulator.isPaused()){
