Improvements to the Refresher UI

--- a/admin/app/views/refresher.scala.html
+++ b/admin/app/views/refresher.scala.html
@@ -7,6 +7,14 @@
 
 @scripts = {
 <script type="text/javascript">
+        var inProgress = "@RefresherController.inProgress";
+
+        function repaintDateServerLastXML(result) {
+            document.getElementById("date_server_last_xml").innerHTML=result;
+        }
+        function repaintDateLastXML(result) {
+            document.getElementById("date_last_xml").innerHTML=result;
+        }
         function repaintRemaining(remaining) {
             document.getElementById("remaining").innerHTML=remaining;
         }
@@ -16,6 +24,18 @@
                 url: "http://dailysoccer.herokuapp.com/remaining/"+remaining,
                 success: function(result) {
                         repaintRemaining(result);
+                }
+            });
+            temp =  $.ajax({
+                url: "http://dailysoccer.herokuapp.com/date_last_xml",
+                success: function(result) {
+                        repaintDateServerLastXML(result);
+                }
+            });
+            temp =  $.ajax({
+                url: "/date_last_xml",
+                success: function(result) {
+                        repaintDateLastXML(result);
                 }
             });
         }
@@ -29,8 +49,33 @@
             });
         }
 
+        function repaintButton() {
+            var temp =  $.ajax({
+                url: "@RefresherController.inProgress",
+                success: function(result) {
+                        if (result == "true" || document.getElementById("remaining").innerHTML == "0") {
+                            inProgress = "true";
+                        } else {
+                            inProgress = "false";
+                        }
+                        if ( $(".play").hasClass("disabled") && inProgress == "false" ) {
+                            $(".play").removeClass("disabled");
+                        }
+                        else if ( !$(".play").hasClass("disabled") && inProgress == "true" ) {
+                            $(".play").addClass("disabled");
+                        }
+                }
+            });
+        }
+
+        $('.ajax').on('click', function(e) {
+            e.preventDefault();
+            $.ajax($(this).attr('href'));
+        });
+
         $(document).ready( function(){
            window.setInterval(getLastXML, 200);
+           window.setInterval(repaintButton, 200);
         })
 
     </script>
@@ -42,11 +87,16 @@
 <h1 class="page-header">Refresher</h1>
     <div><span>Production server has:</span>
          <span style="font-weight:700; margin-left: 0.5em;" id="remaining"></span>
-         <span> more documents than you</span></div>
+         <span> more documents than you</span>
+    </div>
+    <div>
+        <div>Your last XML date: <span id="date_last_xml"></span></div>
+        <div>Server's last XML date: <span id="date_server_last_xml"></span></div>
+    </div>
     <br/>
 
     <div class="btn-group">
-            <a class="btn btn-sim btn-primary play" href="@RefresherController.importFromLast" title="Synchronize all documents from Opta.">
+            <a class="btn btn-sim btn-primary ajax play" href="@RefresherController.importFromLast" title="Synchronize all documents from Opta.">
                 Import
             </a>
     </div>
