--- a/admin/app/views/simulator.scala.html
+++ b/admin/app/views/simulator.scala.html
@@ -6,86 +6,10 @@
 @import controllers.admin.routes._
 @import model._
 
-@scripts = {
-<script type="text/javascript">
-        var was_paused = "@OptaSimulator.isPaused";
-        var is_running = "@{!OptaSimulator.isFinished}";
 
-        function updatePage() {
-            window.location.reload(true);
-        }
+@main("Snapshots - Admin") {
 
-        function repaintButtons() {
-            if (is_running == "true") {
-                $(".btn-sim").removeClass("btn-primary");
-                $(".btn-sim").addClass("btn-success");
-            } else {
-                $(".btn-sim").removeClass("btn-success");
-                $(".btn-sim").addClass("btn-primary");
-            }
-        }
-
-        function checkRunning() {
-            var temp =  $.ajax({
-                url: "/admin/is_running",
-                success: function(result) {
-                        var was_running = is_running
-                        is_running = result;
-                        if (is_running !== was_running){
-                            repaintButtons();
-                        }
-                }
-            });
-        }
-
-        function checkReload() {
-            var temp =  $.ajax({
-                url: "/admin/is_paused",
-                success: function(result) {
-                        if (result !== was_paused) {
-                            updatePage();
-                        }
-                }
-            });
-        }
-
-        function validateForm() {
-            if ((new Date($("#time").text()) < new Date($("#date-pause").val())) || is_running == "false") {
-                return true;
-            } else {
-                alert("Error: La fecha introducida es anterior");
-            }
-            return false;
-        }
-
-        function updateFields() {
-            $("#time").load("/admin/current_date_simulator");
-            $("#nextStepDesc").load("/admin/next_step_desc_simulator");
-            $("#nextStop").load("/admin/next_stop_simulator");
-        }
-
-        $('.ajax').on('click', function(e) {
-            e.preventDefault();
-            $.ajax($(this).attr('href'));
-        });
-
-        $(document).ready( function(){
-           repaintButtons();
-           window.setInterval(updateFields, 100);
-           window.setInterval(checkRunning, 100);
-           window.setInterval(checkReload, 500);
-        })
-
-    </script>
-}
-
-
-@main("Simulator - Admin", scripts) {
-
-<h1 class="page-header">Simulator</h1>
-    <div><span>Current date:</span><span style="font-weight:700; margin-left: 0.5em;" id="time">@GlobalDate.getCurrentDateString()</span></div>
-    <div><span>Next stop:</span><span style="font-weight:700;margin-left: 0.5em;" id="nextStop">@OptaSimulator.getNextStop()</span></div>
-    <div><span>Next file index:</span><span style="font-weight:700;margin-left: 0.5em;" id="nextStepDesc">@OptaSimulator.getNextStepDescription()</span></div>
+<h1 class="page-header">Snapshot</h1>
     <div><strong>Last Snapshot</strong> (@Snapshot.getName()):
         @if(OptaSimulator.isSnapshotEnabled()) {
             On
@@ -95,56 +19,13 @@
     </div>
     <br/>
 
-    <div class="btn-group" style="display:inline-block">
-        @if(OptaSimulator.isPaused()) {
-            <a class="btn btn-sim btn-primary ajax play" href="@SimulatorController.start" title="Starts the simulator at the beginning of time (the first date sent by Opta) or resumes execution from the current date.">
-                @if(!OptaSimulator.isCreated()) {
-                    Start
-                } else {
-                    Resume
-                }
-            </a>
-        } else {
-            <a class="btn btn-sim btn-primary ajax pause" href="@SimulatorController.pause">
-                Pause
-            </a>
-        }
-
-        @if(OptaSimulator.isPaused()) {
-            <a class="btn btn-sim btn-primary ajax forward" href="@SimulatorController.nextStep" title="Process the next Opta file (or first if we are at the beginning of time)">
-                @if(OptaSimulator.isCreated()) {
-                    Next step
-                } else {
-                    First step
-                }
-            </a>
-        } else {
-            <a class="btn btn-sim btn-primary disabled ajax forward" href="@SimulatorController.nextStep" title="Disabled">
-             Next step
-            </a>
-        }
-        <a class="btn btn-sim btn-primary ajax stop" href="@SimulatorController.reset" title="Erases the whole Database and resets to the beginning of time.">
-             Reset
-        </a>
-    </div>
-    <br/>
-    <br/>
-
     <div class="btn-group">
-        <a class="btn btn-sim btn-primary ajax stop" href="@SimulatorController.replayLast" title="Erases the whole Database and plays using a last snapshot.">
+        <a class="btn btn-sim btn-primary stop" href="@SimulatorController.replayLast" title="Erases the whole Database and plays using a last snapshot.">
             Replay Last Snapshot
         </a>
-        <a class="btn btn-sim ajax btn-primary" href="@SimulatorController.snapshot" title="Create a snapshot.">
+        <a class="btn btn-sim btn-primary" href="@SimulatorController.snapshot" title="Create a snapshot.">
             Create Snapshot
         </a>
     </div>
     <hr>
-    @if(OptaSimulator.isPaused()){
-        @helper.form(action = SimulatorController.gotoDate, 'onsubmit -> "return validateForm()") {
-            <input type="datetime-local" value="2014-06-14T00:00" id="date-pause" name="date">
-            <button id="ok" name="ok" type="submit" class="btn btn-primary fforward">
-                Go to Date
-            </button>
-        }
-    }
 }
